cmake_minimum_required(VERSION 3.9)
project(ALDS)

set(CMAKE_CXX_STANDARD 11)

add_executable(ALDS1_1_A ALDS1_1_A.cpp)
add_executable(ALDS1_1_B ALDS1_1_B.cpp)
add_executable(ALDS1_1_C ALDS1_1_C.cpp)
add_executable(ALDS1_1_D ALDS1_1_D.cpp)
add_executable(ALDS1_2_A ALDS1_2_A.cpp)
add_executable(ALDS1_2_B ALDS1_2_B.cpp)
add_executable(ALDS1_2_C ALDS1_2_C.cpp)
add_executable(ALDS1_2_D ALDS1_2_D.cpp)
add_executable(ALDS1_3_A ALDS1_3_A.cpp)
add_executable(ALDS1_3_B ALDS1_3_B.cpp)
add_executable(ALDS1_3_C ALDS1_3_C.cpp)
add_executable(ALDS1_3_D ALDS1_3_D.cpp)
add_executable(ALDS1_4_A ALDS1_4_A.cpp)
add_executable(ALDS1_4_B ALDS1_4_B.cpp)
add_executable(ALDS1_4_C ALDS1_4_C.cpp)
add_executable(ALDS1_4_D ALDS1_4_D.cpp)
add_executable(ALDS1_5_A ALDS1_5_A.cpp)
add_executable(ALDS1_5_B ALDS1_5_B.cpp)
add_executable(ALDS1_5_C ALDS1_5_C.cpp)
add_executable(ALDS1_5_D ALDS1_5_D.cpp)
add_executable(ALDS1_6_A ALDS1_6_A.cpp)
add_executable(ALDS1_6_B ALDS1_6_B.cpp)
add_executable(ALDS1_6_C ALDS1_6_C.cpp)
add_executable(ALDS1_6_D ALDS1_6_D.cpp)
add_executable(ALDS1_7_A ALDS1_7_A.cpp)
add_executable(ALDS1_7_B ALDS1_7_B.cpp)
add_executable(ALDS1_7_C ALDS1_7_C.cpp)
add_executable(ALDS1_7_D ALDS1_7_D.cpp)
add_executable(ALDS1_8_A ALDS1_8_A.cpp)
add_executable(ALDS1_8_B ALDS1_8_B.cpp)
add_executable(ALDS1_8_C ALDS1_8_C.cpp)
add_executable(ALDS1_9_A ALDS1_9_A.cpp)
add_executable(ALDS1_9_B ALDS1_9_B.cpp)
add_executable(ALDS1_9_C ALDS1_9_C.cpp)
add_executable(ALDS1_10_A ALDS1_10_A.cpp)
add_executable(ALDS1_10_B ALDS1_10_B.cpp)
add_executable(ALDS1_10_C ALDS1_10_C.cpp)
add_executable(ALDS1_11_A ALDS1_11_A.cpp)
add_executable(ALDS1_11_B ALDS1_11_B.cpp)
add_executable(ALDS1_11_C ALDS1_11_C.cpp)
add_executable(ALDS1_11_D ALDS1_11_D.cpp)
add_executable(ALDS1_12_A ALDS1_12_A.cpp)
add_executable(ALDS1_12_B ALDS1_12_B.cpp)
add_executable(ALDS1_12_C ALDS1_12_C.cpp)
add_executable(ALDS1_13_A ALDS1_13_A.cpp)
add_executable(ALDS1_13_B ALDS1_13_B.cpp)
add_executable(ALDS1_13_C ALDS1_13_C.cpp)