cmake_minimum_required(VERSION 3.9)
project(CGL)

set(CMAKE_CXX_STANDARD 11)

add_executable(CGL_1_A CGL_1_A.cpp)
add_executable(CGL_1_B CGL_1_B.cpp)
add_executable(CGL_1_C CGL_1_C.cpp)
add_executable(CGL_2_A CGL_2_A.cpp)
add_executable(CGL_2_B CGL_2_B.cpp)
add_executable(CGL_2_C CGL_2_C.cpp)
add_executable(CGL_2_D CGL_2_D.cpp)
add_executable(CGL_3_C CGL_3_C.cpp)
add_executable(CGL_4_A CGL_4_A.cpp)
add_executable(CGL_6_A CGL_6_A.cpp)
add_executable(CGL_7_D CGL_7_D.cpp)
add_executable(CGL_7_E CGL_7_E.cpp)