cmake_minimum_required(VERSION 3.9)
project(Prelim)

set(CMAKE_CXX_STANDARD 11)

add_executable(Pencils pencils.cpp)
add_executable(Sugoroku sugoroku.cpp)
add_executable(TrunkRoad trunk_road.cpp)
add_executable(Mizuyokan mizuyokan.cpp)
add_executable(deforestation deforestation.cpp)
add_executable(LthKthNumber LthKthNumber.cpp)
add_executable(Microwave microwave.cpp)
add_executable(PointCard point_card.cpp)
add_executable(RefreshmentArea refreshment_area.cpp)
add_executable(PlushToys plush_toys.cpp)
add_executable(Ridge ridge.cpp)
add_executable(SnakeJOI snake_joi.cpp)
add_executable(SelectingSubjects selecting_subjects.cpp)
add_executable(SwappingBibs swapping_bibs.cpp)
add_executable(RussianFlag russian_flag.cpp)
add_executable(WalkingInJOIKingdom walking_in_joi_kingdom.cpp)
add_executable(ZombieIsland zombie_island.cpp)
add_executable(FoodStalls food_stalls.cpp)
add_executable(WaterRate water_rate.cpp)
add_executable(ChristmasParty christmas_party.cpp)
add_executable(WeatherForecaster weather_forecaster.cpp)
add_executable(SilkRoad silk_road.cpp)
add_executable(Sandcastle sandcastle.cpp)
add_executable(AverageScore average_score.cpp)
add_executable(Vote vote.cpp)
add_executable(SuperMetropolis super_metropolis.cpp)
add_executable(Schedule schedule.cpp)
add_executable(Taxis taxis.cpp)
add_executable(XiaoLongBao xiao_long_bao.cpp)
add_executable(Homework homework.cpp)
add_executable(UniqueNumber unique_number.cpp)
add_executable(Signboard signboard.cpp)
add_executable(HotDays hot_days.cpp)
add_executable(Fish fish.cpp)
add_executable(Lunch lunch.cpp)
add_executable(Soccer soccer.cpp)
add_executable(BestPizza best_pizza.cpp)
add_executable(Pasta pasta.cpp)
add_executable(Illumination illumination.cpp)
add_executable(ZigZagNumbers zig_zag_numbers.cpp)
add_executable(TotalTime total_time.cpp)
add_executable(Ring ring.cpp)
add_executable(Tile tile.cpp)
add_executable(AFirstGrader a_first_grader.cpp)
add_executable(Cheese cheese.cpp)
add_executable(JOIFlag joi_flag.cpp)